# geometrics

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  STATUS.md  app_analyze.py  app_explore.py  app_learn.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  docs.yml  keep-warm.yml  release.yml
datasets/BOL-005popAdj-PWTscaled/: README.md  VERIFICATION.md
datasets/BOL-005popAdj-PWTscaled/ADM0/: README.md  bolivia_adm0.csv  bolivia_adm0.dta  bolivia_adm0.gpkg  bolivia_adm0.parquet  bolivia_adm0_boundaries.gpkg  bolivia_adm0_data_def.csv
datasets/BOL-005popAdj-PWTscaled/ADM1/: README.md  bolivia_adm1.csv  bolivia_adm1.dta  bolivia_adm1.gpkg  bolivia_adm1.parquet  bolivia_adm1_boundaries.gpkg  bolivia_adm1_data_def.csv
datasets/BOL-005popAdj-PWTscaled/ADM2/: README.md  bolivia_adm2.csv  bolivia_adm2.dta  bolivia_adm2.parquet  bolivia_adm2_data_def.csv
datasets/BOL-005popAdj-PWTscaled/GRID/: README.md  bolivia_grid_cells.dta  bolivia_grid_cells.gpkg  bolivia_grid_cells.parquet  bolivia_grid_cells_data_def.csv
docs/: _quarto.yml  analyze.qmd  changelog.qmd  custom.scss  explore.qmd  index.qmd  learn.qmd  llms.txt  objects.json  quickstart.qmd  robots.txt  use-with-llms.qmd
docs/_freeze/analyze/execute-results/: html.json
docs/_freeze/articles/bolivia-dataset/execute-results/: html.json
docs/_freeze/articles/convergence/execute-results/: html.json
docs/_freeze/articles/data-model/execute-results/: html.json
docs/_freeze/articles/dynamics/execute-results/: html.json
docs/_freeze/articles/inequality/execute-results/: html.json
docs/_freeze/articles/spillovers/execute-results/: html.json
docs/_freeze/learn/execute-results/: html.json
docs/articles/: bolivia-dataset.qmd  convergence.qmd  data-model.qmd  dynamics.qmd  india-case-study.qmd  inequality.qmd  spatial-dependence.qmd  spillovers.qmd
notebooks/: analyze.ipynb  explore.ipynb  india_case_study.ipynb  learn.ipynb  quickstart.ipynb
src/geometrics/: __init__.py  _common.py  _data_dict.py  _geo.py  _impacts.py  _labels.py  _mapping.py  _panel.py  _roles.py  _theme.py  _types.py  _validation.py  clubs.py  convergence.py  dependence.py  distribution_dynamics.py  gwr.py  maps.py  regional_inequality.py  spacetime.py  spatial_models.py  weights.py
src/geometrics/data/: __init__.py  _registry.py  india32_dict.csv  india520_dict.csv
src/geometrics/pedagogy/: __init__.py  _format.py  _mixin.py  _registry.py
src/geometrics/pedagogy/_interpret/: __init__.py  _convergence.py  _dependence.py  _dynamics.py  _gwr.py  _inequality.py  _maps.py  _sandbox.py  _shared.py  _spacetime.py  _spatial_models.py  _weights.py
src/geometrics/pedagogy/_text/: __init__.py  convergence.py  correlation.py  dynamics.py  inequality.py  models.py  spatial.py
src/geometrics/sandbox/: __init__.py  _convergence.py  _dgp.py  _dynamics.py  _esda.py  _inequality.py  _models.py  _validate.py
src/geometrics/streamlit_app/: __init__.py  _common.py  _data.py  _entry.py  _pages.py  _pages_analyze.py  _pages_explore.py  _pages_learn.py  _run.py  _sidebar.py
tests/: conftest.py  test_clubs.py  test_convergence.py  test_data.py  test_data_bolivia.py  test_data_dict.py  test_dependence.py  test_dynamics.py  test_geo.py  test_gwr.py  test_impacts.py  test_inequality.py  test_labels.py  test_maps.py  test_package_import.py  test_panel.py  test_paper_parity.py  test_pedagogy.py  test_roles.py  test_sandbox.py  test_spacetime.py  test_spatial_models.py  test_streamlit_app.py  test_theme.py  test_validation.py  test_weights.py
tests/fixtures/: make_fixtures.py  mini520.dta  mini520.geojson
tools/: build_hero.py  build_llms_txt.py  build_logo.py  build_quickstart_notebook.py
