[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geometrics"
version = "0.1.3"
description = "Regional growth, convergence, and inequality analysis on the PySAL stack."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Carlos Mendez" }]
keywords = [
    "spatial econometrics",
    "regional science",
    "convergence",
    "inequality",
    "pysal",
    "geopandas",
    "spatial analysis",
    "plotly",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "geopandas>=1.0",
    "libpysal>=4.9",
    "esda>=2.5",
    "inequality>=1.0",
    "mapclassify>=2.6",
    "spreg>=1.8",
    "mgwr>=2.2",
    "statsmodels>=0.14",
    "plotly>=5.24",
    "great-tables>=0.16",
    "pooch>=1.8",
]

[project.optional-dependencies]
# Distribution dynamics (Markov / Spatial Markov) via giddy. Kept out of core because the
# giddy -> quantecon -> numba chain has no recent wheels on some platforms (macOS x86_64);
# core `pip install geometrics` must never fall back to an sdist build.
dynamics = [
    "giddy>=2.3",
]
# Static PNG export of Plotly figures (tile-free maps export deterministically; tile maps
# need kaleido>=1.0's Chromium engine).
png = [
    "kaleido>=1.0",
]
# The three no-code apps (geometrics.streamlit_app; app_explore.py etc. at the repo root).
streamlit = [
    "streamlit>=1.40",
]
all = [
    "geometrics[dynamics,png,streamlit]",
]

[project.scripts]
geometrics-explore = "geometrics.streamlit_app:main_explore"
geometrics-analyze = "geometrics.streamlit_app:main_analyze"
geometrics-learn = "geometrics.streamlit_app:main_learn"

[project.urls]
Homepage = "https://github.com/quarcs-lab/geometrics"
Documentation = "https://quarcs-lab.github.io/geometrics/"
Repository = "https://github.com/quarcs-lab/geometrics"
Issues = "https://github.com/quarcs-lab/geometrics/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "hypothesis>=6",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs",
    "pre-commit>=3.7",
]
docs = [
    "quartodoc>=0.11",
    "griffe<1",
    "jupyter",
    "nbformat>=5.9",
]

[tool.uv]
# giddy -> quantecon -> numba: without a floor the resolver escapes numba's numpy cap
# by walking down to ancient sdist-only releases (numba 0.53 / llvmlite 0.36) that
# cannot build on Python 3.11+. The global floor forces a wheel-bearing numba and lets
# numpy resolve downward instead. On Intel macs the last numba with wheels is 0.60,
# which caps numpy at 2.0.x there.
constraint-dependencies = [
    "numba>=0.60",
    "numba<0.61; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy<2.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # Without these floors the resolver escapes numba's numpy cap by selecting an
    # ancient quantecon (0.3.x declares no numba dependency and breaks at import).
    "quantecon>=0.7",
    "giddy>=2.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/geometrics"]

[tool.hatch.build.targets.sdist]
include = [
    "src/geometrics",
    "tests",
    "README.md",
    "LICENSE",
    "app_explore.py",
    "app_analyze.py",
    "app_learn.py",
    "streamlit_app.py",
    ".streamlit",
]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "D", "RUF"]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
    "E501", # line length handled by formatter
    "B008", # function call in default argument (intentional for np.nanmean etc.)
    "RUF022", # __all__ is intentionally grouped by topic, not sorted
]
# Greek symbols used in scientific prose/labels (β and λ are not flagged; σ is confusable
# with o, so it must be allowed explicitly to read as "σ-convergence" alongside
# "β-convergence"; ρ is the spatial autoregressive parameter, γ the SLX lag coefficients,
# α the significance level).
allowed-confusables = ["σ", "ρ", "γ", "α"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"docs/*" = ["D"]
"tools/*" = ["D"]

[tool.mypy]
# 3.12, not the 3.11 package floor: numpy >= 2.5 ships PEP 695 `type` statements in its
# stubs, which mypy only parses at target 3.12+. Runtime 3.11 compatibility is covered
# by ruff's py311 target and the 3.11 cells of the CI test matrix.
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
files = ["src/geometrics"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "network: tests that download the real case-study data from GitHub",
    "dynamics: tests that require the optional giddy (distribution dynamics) extra",
    "app: tests that require the optional streamlit (apps) extra",
    "slow: long-running tests (GWR on the full case study, large Monte-Carlo draws)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["geometrics"]
branch = true
# The Streamlit UI layer is exercised via AppTest smoke tests, not line coverage.
omit = ["*/streamlit_app/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
